Plot.R : modified the generation of the debug string
begin.view.xml : added dependency to include the Ext3 client API (which also pulls in Ext3 library), since it is no longer served by default

OpenCytoVisualization.js : added a link to the web part's title to point to a page with the R code

--- a/views/begin.view.xml
+++ b/views/begin.view.xml
@@ -8,7 +8,7 @@
         <dependency path='OpenCyto/Spinner/Spinner.css'/>
         <dependency path='OpenCyto/OpenCyto.css'/>
 
-        <dependency path='Ext3'/>
+        <dependency path='clientapi/ext3'/>
 
         <dependency path='OpenCyto/ExtendedComboBox.js'/>
         <dependency path='OpenCyto/gridfilters/menu/RangeMenu.js'/>
